--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                     $routeProvider.when("/news", {
                         templateUrl: "app/partials/news.html"
                     });
-                    $routeProvider.when("/news/:id", {
+                    $routeProvider.when("/news/", {
                         templateUrl: "app/partials/news-details.html"
                     });
                     $routeProvider.when("/about-us", {
