--- a/public/app/partials/admin/message-manage.html
+++ b/public/app/partials/admin/message-manage.html
@@ -1,13 +1,13 @@
-<div class="container-fluid" ng-controller="">
+<div class="container-fluid" ng-controller="messageManageCtrl">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">留言板</h1>
-            <div class="list-group" ng-repeat="">
-                <h4 class="list-group-item-heading">{{}}</h4>
+            <div class="list-group" ng-repeat="m in items">
+                <h4 class="list-group-item-heading">{{m.name}}</h4>
                 <p class="list-group-item-text">
                     <button class="btn btn-default btn-sm" ><span class="glyphicon glyphicon-remove"></span>删除</button>
                 </p>
-                <p class="list-group-item-text">{{}}</p>
+                <p class="list-group-item-text">{{m.content}}</p>
                 <hr>
             </div>
             <pagination boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" ng-change="pageChanged()"></pagination>
