--- a/public/app/partials/admin/template/alert-delete.html
+++ b/public/app/partials/admin/template/alert-delete.html
@@ -1,8 +1,10 @@
 <div class="modal-header">
     <h3 class="modal-title">警告</h3>
-    <span class="list-group-item">您确定要删除吗?</span>
-    <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="">确定</button>
-        <button class="btn btn-warning" ng-click="cancel()">退出</button>
-    </div>
+</div>
+<div class="panel-body bg-danger">
+    您确定要删除吗?
+</div>
+<div class="modal-footer">
+    <button class="btn btn-primary" ng-click="submit()">确定</button>
+    <button class="btn btn-warning" ng-click="cancel()">退出</button>
 </div>
