--- a/public/app/partials/admin/message-manage.html
+++ b/public/app/partials/admin/message-manage.html
@@ -3,10 +3,9 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">留言板</h1>
             <div class="list-group" ng-repeat="m in items">
-                <h4 class="list-group-item-heading">{{m.name}}</h4>
-                <p class="list-group-item-text">
-                    <button class="btn btn-default btn-sm" ><span class="glyphicon glyphicon-remove"></span>删除</button>
-                </p>
+                <h4 class="list-group-item-heading">{{m.name}}
+                    <button class="btn btn-default btn-sm" ng-click="openDeleteDialog(m._id,'deleteMessageCtrl','sm')"><span class="glyphicon glyphicon-remove"></span>删除</button>
+                </h4>
                 <p class="list-group-item-text">{{m.content}}</p>
                 <hr>
             </div>
