--- a/public/app/partials/admin/news-manage.html
+++ b/public/app/partials/admin/news-manage.html
@@ -4,11 +4,10 @@
             <h1 class="page-header">新闻 <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span>新增</button></h1>
 
             <div class="list-group" ng-repeat="n in items">
-                <h4 class="list-group-item-heading">{{n.title}} <small>{{n.name}}</small></h4>
-                <p class="list-group-item-text">
-                <button class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span>修改</button>
-                <button class="btn btn-default btn-sm" ><span class="glyphicon glyphicon-remove"></span>删除</button>
-                </p>
+                <h4 class="list-group-item-heading">{{n.title}} <small>{{n.name}}</small>
+                    <button class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span>修改</button>
+                    <button class="btn btn-default btn-sm" ><span class="glyphicon glyphicon-remove"></span>删除</button>
+                </h4>
                 <p class="list-group-item-text">{{n.content}}</p>
                 <hr>
             </div>
