--- a/public/app/partials/admin/template/update-news.html
+++ b/public/app/partials/admin/template/update-news.html
@@ -1,12 +1,12 @@
-<div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <form name="updateForm" novalidate>
-            <h2 class="orm-signin-heading">修改新闻</h2>
+<div class="modal-header">
+    <form name="updateNewsForm" novalidate>
+        <h2 class="modal-title">修改新闻</h2>
+        <div class="modal-body">
             <p>
                 <input type="text" id="title" ng-model="news.title" name="title" class="form-control" placeholder="请输入新闻标题"
                        required>
                 <span class="error text-danger"
-                      ng-show="(updateForm.title.$dirty) && updateForm.title.$error.required">标题不能为空！
+                      ng-show="(updateNewsForm.title.$dirty) && updateNewsForm.title.$error.required">标题不能为空！
                 </span>
             </p>
             <p>
@@ -14,7 +14,7 @@
                        required class="form-control"
                        placeholder="请输作者">
                 <span class="error text-danger"
-                      ng-show="(updateForm.name.$dirty) && updateForm.name.$error.required">作者不能为空！
+                      ng-show="(updateNewsForm.name.$dirty) && updateNewsForm.name.$error.required">作者不能为空！
                 </span>
             </p>
             <p>
@@ -23,13 +23,17 @@
                           placeholder="请输入内容">
                 </textarea>
                 <span class="error text-danger"
-                      ng-show="(updateForm.content.$dirty) && updateForm.content.$error.required">内容不能为空！</span>
+                      ng-show="(updateNewsForm.content.$dirty) && updateNewsForm.content.$error.required">内容不能为空！</span>
 
             </p>
-                <button class="btn btn-primary btn-default btn-primary col-sm-offset-1" type="submit"  ng-click="submit()">修改</button>
-                <button class="btn btn-warning btn-default col-sm-offset-6" ng-click="cancel()">关闭</button>
-        </form>
         </div>
-    </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary btn-default btn-primary col-sm-offset-1" type="submit"  ng-click="submit()">修改</button>
+            <button class="btn btn-warning btn-default col-sm-offset-6" ng-click="cancel()">关闭</button>
+        </div>
+    </form>
+
+</div>
+
 
 
