--- a/public/app/partials/admin/news-manage.html
+++ b/public/app/partials/admin/news-manage.html
@@ -5,8 +5,8 @@
 
             <div class="list-group" ng-repeat="n in items">
                 <h4 class="list-group-item-heading">{{n.title}} <small>{{n.name}}</small>
-                    <button ng-click="openUpdateDialog(n,'updateNewsCtrl','md')" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span>修改</button>
-                    <button class="btn btn-default btn-sm" ng-click="openDeleteNews(n,'submitNewsCtrl','sm')" ><span class="glyphicon glyphicon-remove"></span>删除</button>
+                    <button ng-click="openUpdateDialog(n,'updateNewsCtrl')" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span>修改</button>
+                    <button class="btn btn-default btn-sm" ng-click="openDeleteDialog(n,'deleteNewsCtrl','sm')" ><span class="glyphicon glyphicon-remove"></span>删除</button>
                 </h4>
                 <p class="list-group-item-text">{{n.content}}</p>
                 <hr>
