add markdown editor

--- a/views/news-editor.ejs
+++ b/views/news-editor.ejs
@@ -32,7 +32,9 @@
                 imgAction: '/image',
                 pubAction: '/',
                 titleName: 'title',
-                textName: 'text'
+                textName: 'text',
+                amdInitText:'111111',
+                amdInitTitle:'22222'
             });
         });
     }(PIE));
