--- a/public/app/partials/admin/template/add-news.html
+++ b/public/app/partials/admin/template/add-news.html
@@ -10,6 +10,9 @@
                 </span>
             </p>
             <p>
+                上传图片:<input type="file" name="file" class="btn-primary">
+            </p>
+            <p>
                 <input type="text" name="name" ng-model="news.name"
                        required class="form-control"
                        placeholder="请输作者">
