--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,6 +8,7 @@
     <link href="/stylesheets/bootstrap.css" rel="stylesheet">
     <link href="/stylesheets/admin.css" rel="stylesheet">
     <link href="/stylesheets/animate.css" rel="stylesheet">
+    <script src="/javascripts/jquery.js"></script>
     <script src="/javascripts/angular.js"></script>
     <script src="/javascripts/angular-route.js"></script>
     <script src="/javascripts/angular-resource.js"></script>
