--- a/public/app/partials/admin/template/add-news.html
+++ b/public/app/partials/admin/template/add-news.html
@@ -27,8 +27,8 @@
             </p>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary btn-default btn-primary col-sm-offset-1" type="submit" ng-disabled="registerForm.$invalid" ng-click="submit(news)">添加</button>
-            <button class="btn btn-warning btn-default col-sm-offset-6"  ng-click="cancel()">关闭</button>
+            <button class="btn btn-primary btn-default btn-primary col-sm-offset-1" type="submit" ng-disabled="increaseNewsForm.$invalid" ng-click="submit(news)">添加</button>
+            <button class="btn btn-warning btn-default col-sm-offset-6" ng-click="cancel()">关闭</button>
         </div>
     </form>
 </div>
