add image upload

--- a/views/news-editor.ejs
+++ b/views/news-editor.ejs
@@ -29,7 +29,7 @@
     (function (PIE) {
         window.addEventListener('load', function () {
             PIE.makeAMarkdown(document.getElementById('amd-editor'), {
-                imgAction: '/image',
+                amdUploadImgAction: '/upload',
                 pubAction: '/',
                 titleName: 'title',
                 textName: 'text',
