--- a/public/app/partials/news.html
+++ b/public/app/partials/news.html
@@ -1,6 +1,7 @@
 <div class="container" ng-controller="newsCtrl">
     <div class="row">
         <div class="col-sm-9 col-md-10">
+        </div>
             <div ng-repeat="n in items">
                 <h1>
                     <a href="#/news/{{n._id}}"> {{n.title}}</a>
