--- a/public/app/partials/admin/users-manage.html
+++ b/public/app/partials/admin/users-manage.html
@@ -13,7 +13,7 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="u in items">
-                    <td>{{u.email}}</td>
+                    <td>{{u.username}}</td>
                     <td>{{u.name}}</td>
                     <td>{{u.createAt | date:'yyyy-MM-dd HH:mm:ss'}}</td>
                     <td>
