--- a/public/app/partials/admin/users-manage.html
+++ b/public/app/partials/admin/users-manage.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">用户</h1>
+            <input type="text" class="input-sm">
             <table class="table table-striped table-hover">
                 <thead>
                 <tr>
