add file upload

--- a/views/news-editor.ejs
+++ b/views/news-editor.ejs
@@ -30,7 +30,7 @@
         window.addEventListener('load', function () {
             PIE.makeAMarkdown(document.getElementById('amd-editor'), {
                 amdUploadImgAction: '/upload',
-                pubAction: '/',
+                amdPubAction: '/news',
                 titleName: 'title',
                 textName: 'text',
                 amdInitText:'111111',
