--- a/public/app/partials/admin/news-manage.html
+++ b/public/app/partials/admin/news-manage.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" ng-controller="newsManagerCtrl">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">新闻 <button class="btn btn-default" ng-click="openAddDialog('submitNewsCtrl','md')"><span class="glyphicon glyphicon-ok"></span>新增</button></h1>
+            <h1 class="page-header">新闻 <a class="btn btn-default" href="/admin/news-editor"><span class="glyphicon glyphicon-ok"></span>新增</a></h1>
             <div class="list-group" ng-repeat="n in items">
                 <h4 class="list-group-item-heading">{{n.title}} <small>{{n.name}}</small>
                     <small>{{n.createAt | date:'yyyy-MM-dd HH:mm:ss'}}</small>
