--- a/public/app/partials/admin/users-manage.html
+++ b/public/app/partials/admin/users-manage.html
@@ -3,10 +3,9 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">用户</h1>
             <div class="input-group col-sm-4">
-                <input type="text" class="form-control" ng-model="search" placeholder="请输入关键字" aria-describedby="basic-addon2">
+                <input type="text" class="form-control" ng-model="search" placeholder="请输入姓名查询" aria-describedby="basic-addon2">
                 <span class="input-group-addon glyphicon glyphicon-search" id="basic-addon2">搜索</span>
             </div>
-
             <table class="table table-striped table-hover">
                 <thead>
                 <tr>
