--- a/public/app/partials/admin/news-manage.html
+++ b/public/app/partials/admin/news-manage.html
@@ -3,8 +3,8 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">新闻 <a class="btn btn-default" href="/admin/news-editor"><span class="glyphicon glyphicon-ok"></span>新增</a></h1><br>
             <div class="input-group col-sm-4">
-                <input type="text" class="form-control" ng-model="search" placeholder="请输入标题查询" aria-describedby="basic-addon2">
-                <span class="input-group-addon glyphicon glyphicon-search" id="basic-addon2">搜索</span>
+                <input type="text" class="form-control" placeholder="请输入新闻标题查询" ng-model="search">
+                <span class="input-group-addon"><span class="glyphicon glyphicon-search">搜索</span></span>
             </div>
             <hr>
             <div class="list-group" ng-repeat="n in items">
