--- a/public/app/partials/admin/users-manage.html
+++ b/public/app/partials/admin/users-manage.html
@@ -3,7 +3,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">用户</h1>
             <div class="input-group col-sm-4">
-                <input type="text" class="form-control" placeholder="请输入新闻标题查询" ng-model="search">
+                <input type="text" class="form-control" placeholder="请输入用户名查询" ng-model="search">
                 <span class="input-group-addon"><span class="glyphicon glyphicon-search">搜索</span></span>
             </div>
             <table class="table table-striped table-hover">
