Modify search type

--- a/public/app/partials/news-details.html
+++ b/public/app/partials/news-details.html
@@ -1,4 +1,4 @@
 <div class="container" ng-controller="newsDetailCtrl">
-    <h2>{{n.title}}<small>{{n.createAt | date:'yyyy-MM-dd HH:mm:ss'}}</small></h2>
+    <h2>{{n.title}}&nbsp;&nbsp;<small>{{n.createAt | date:'yyyy-MM-dd HH:mm:ss'}}</small></h2>
         {{n.content}}
 </div>
