Modify search type

--- a/public/app/partials/about-us.html
+++ b/public/app/partials/about-us.html
@@ -59,6 +59,6 @@
 
         <h4> 保证终身免费分享专业实用的行业经验和知识．<br/></h4>
 
-        <h4>为保证广大技术爱好者的利益，沙龙终身拒绝商业广告行为。<br/></h4>
+        <h4>为保证广大技术爱好者的利益，沙龙终身拒绝商业广告行为.<br/></h4>
     </div>
 </div>
